# WhatsAppLangraphAgent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 12d17699ebc2_create_users_table.py  a1b2c3d4e5f6_create_personas_table.py  b2c3d4e5f6a7_create_conversations_table.py  e9ec7fe9d1fc_create_providers_table.py  f01c5d1cc328_widen_provider_api_key_for_fernet.py
app/: anthropic_client.py  baileys_client.py  graph.py  llm.py  main.py  openwa_client.py  personas.py  state.py
app/__tests__/: test_classify_no_llm.py  test_conversations.py  test_generate_runtime.py  test_resolve_helpers.py
app/api/: auth.py  chat.py  personas.py  providers.py
app/core/: cache.py  config.py  deps.py  logging.py  security.py
app/db/: engine.py  models.py
app/providers/: anthropic.py  base.py  openai.py  registry.py
app/repositories/: conversation_repo.py  persona_repo.py  provider_repo.py  user_repo.py
app/schemas/: auth.py  chat.py  persona.py  (+1 more)
baileys-sidecar/: baileys-sidecar.ts  build-sea.cjs  package-lock.json  package.json  sea-config.json  tsconfig.json
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: baileys_proxy.rs  baileys_sidecar.rs  lib.rs  main.rs  ngrok.rs  port_check.rs  sidecar.rs
scripts/: build_local.bat  build_release.bat  check_tables.py  inspect_thread.py  recluze-api.spec  run.ps1  run.sh  run_backend.py  test_dto.py
(+34 files in other folders)
