[project]
name = "whatsapp-bot-langgraph"
version = "0.1.0"
description = "LangGraph course — iteration 5: persistent memory via SqliteSaver"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "httpx==0.27.2",
    "langgraph==0.2.50",
    "langchain-core==0.3.21",
    "pydantic==2.10.2",
    "pydantic-settings>=2.7.0",
    "python-dotenv==1.0.1",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
