[package]
name = "recluze"
version = "0.1.3"
description = "Recluze Desktop"
authors = ["you"]
edition = "2021"

[lib]
name = "recluze_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"
